# AI-Casa

./: Dockerfile  PROJECT_STRUCTURE.md  README.md  activate  activate.bat  app.py  calculations.py  plan.dxf  pyproject.toml  pyvenv.cfg  render_3d.py  requirements.txt  test_agent.py  video_simulation.py
.github/agents/: my-agent.agent.md
